--- a/become-an-instructor/index.html
+++ b/become-an-instructor/index.html
@@ -53,7 +53,7 @@ page_sections:
       card_button:
         button_text: Explore Part 3
         button_link: ./driving-instructor-training-part-3
-  - template: whats_included
+  - template: whats-included
     title: 'What''s included:'
     features:
     - feature_icon: <i class="fas fa-pound-sign fa-lg"></i>
