--- a/become-an-instructor/index.html
+++ b/become-an-instructor/index.html
@@ -89,7 +89,7 @@ page_sections:
     {% include blocks/feature-left.html %}
   {% when 'three-cards' %}
     {% include blocks/three-cards.html %}
-  {% when 'whats_included' %}
+  {% when 'whats-included' %}
     {% include blocks/whats-included.html %}
   {% endcase %}
 {% endfor %}
