--- a/become-an-instructor/index.html
+++ b/become-an-instructor/index.html
@@ -31,8 +31,8 @@ page_sections:
     training.
   youtube_url: https://www.youtube.com/embed/Y0E972YNdCI
   button:
-    button_text: ''
-    button_link: ''
+    button_text: 'Get in touch'
+    button_link: '#get-in-touch'
 - template: three-cards
   title: Our guide to becoming an ADI qualified driving instructor
   text: We have a great track record, from full driving instructor training packages
