--- a/our-instructors.html
+++ b/our-instructors.html
@@ -42,21 +42,21 @@ instructors:
   instructor_bio: |-
     William is one of our new instructors. He formerly worked in mental health/learning disabilities for 20 years as a Team Leader working with people who have learning disabilities.
     He has an award from the Minister of Health and Education for working with young people and adults. He is trained in Health & Safety, Advanced First Aid and Basic Life Support. His background in healthcare has given him a very calm and person-centred approach when it comes to teaching and communication and he’s looking forward to a change of career and helping people learn to drive and pass their test.
-  instructor_image: "/uploads/img_2344.jpeg"
+  instructor_image: "/v1637591563/checkmirrors/img_2344.jpg"
 - instructor_name: Ben Foster
   instructor_info: ''
   instructor_bio: Ben has 27 years of working in the catering and hospitality industry
     and so high standards of quality service are important to him. He has regular
     coached his team to achieve professional qualifications and he takes great satisfaction
     in helping others to achieve their goals.
-  instructor_image: "/uploads/img_3210.jpg"
+  instructor_image: "/v1637591505/checkmirrors/img_3210.jpg"
 - instructor_name: Naaman Hudson
   instructor_info: Web Developer
   instructor_bio: "Naaman is the checkmirrors web developer and has been working in
     \n web development for over 10 years, he has worked with a range of different
     industries from automotive to financial services. \n\nAnything digital for checkmirrors,
     Naaman is our man."
-  instructor_image: "/uploads/img_1726.jpg"
+  instructor_image: "/v1637591504/checkmirrors/img_1726.jpg"
 
 ---
 <!-- Page Intro -->
