--- a/become-an-instructor/index.html
+++ b/become-an-instructor/index.html
@@ -45,21 +45,21 @@ page_sections:
       to use the hand sanitiser before each lesson.
     card_button:
       button_text: Explore Part 1
-      button_link: "./driving-instructor-training-part-1"
+      button_link: "/become-an-instructor/driving-instructor-training-part-1"
   - card_image: "/v1637591558/checkmirrors/learn2.png"
     card_title: Part 2
     card_text: We provide hand sanitiser in all of our cars and kindly request students
       to use the hand sanitiser before each lesson.
     card_button:
       button_text: Explore Part 2
-      button_link: "./driving-instructor-training-part-2"
+      button_link: "/become-an-instructor/driving-instructor-training-part-2"
   - card_image: "/v1637591559/checkmirrors/learn3.png"
     card_title: Part 3
     card_text: We provide hand sanitiser in all of our cars and kindly request students
       to use the hand sanitiser before each lesson.
     card_button:
       button_text: Explore Part 3
-      button_link: "./driving-instructor-training-part-3"
+      button_link: "/become-an-instructor/driving-instructor-training-part-3/"
 - template: whats-included
   title: 'What''s included:'
   features:
