new contact form

--- a/book-now.html
+++ b/book-now.html
@@ -21,7 +21,7 @@ tags:
   <div class="row justify-content-center">
     <div class="col-12 col-md-5">
 
-      {% include form.html %}
+      {% include form2.html %}
     </div>
   </div>
 </div>
