--- a/_become-an-instructor/index.html
+++ b/_become-an-instructor/index.html
@@ -107,9 +107,11 @@ details_section:
   {% case template %}
   {% when 'feature-left' %}
     {% include blocks/feature-left.html %}
-  {% when 'three-cards' %}
-    {% include blocks/three-cards.html %}
   {% when 'whats-included' %}
     {% include blocks/whats-included.html %}
   {% endcase %}
 {% endfor %}
+
+
+<!--   {% when 'three-cards' %}
+    {% include blocks/three-cards.html %} -->
