--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ services_section:
       * Flexible times to suit
       * Accredited instructors
       * Only £30 per lesson
+      * Manual and Automatic available
     card_button:
       button_link: "/driving-lessons-york/"
       button_text: Learn More
@@ -30,6 +31,7 @@ services_section:
       button_link: "/passplus"
       button_text: Learn More
     card_text: |-
+      * Learn new driving skills
       * Excellent for new drivers
       * Lower your insurance premium
       * Safe driving for life
@@ -42,6 +44,7 @@ services_section:
       * Flexible working hours
       * Self-employment
       * Regular pupil referrals
+      * Support throughout 
   services_text: "Here at checkmirrors we strive to provide the very best service
     available, all of our instructors are fully ADI qualified instructors and are
     we now providing a fully COVID-19 secure learning environment. \n\nWe also have
