--- a/lessons-york.html
+++ b/lessons-york.html
@@ -29,7 +29,7 @@ offers_section:
   offers:
   - heading: Manual and Automatic
     text: We now offer driving lessons in Manual and Automatic cars
-    image: ''
+    image: '/img/lessons-5-350x150.jpeg'
   - heading: Learn in York and the surrounding area
     text: We now have instructors all around York and the surrounding area.
     image: "/img/lessons-2-350x150.jpg"
