Image Optimisation Phase1

--- a/lessons-york.html
+++ b/lessons-york.html
@@ -26,28 +26,28 @@ intro_section:
   cta:
     button_link: "/driving-lessons-york/what-you-need/"
     button_text: Learn More
-  image: "/img/passplus-header.jpg"
+  image: "https://res.cloudinary.com/njh101010/image/upload/q_auto/v1637593819/checkmirrors/passplus-header_blpa0l.webp"
 offers_section:
   offers:
   - heading: Manual and Automatic
     text: 'We now offer our amazing driving lessons in both Manual and Automatic transmission
       vehicles '
-    image: "/img/lessons-5-350x150.jpeg"
+    image: "https://res.cloudinary.com/njh101010/image/upload/q_auto/v1637593949/checkmirrors/lessons-1-350x150_tnugny.webp"
   - heading: Learn in York and the surrounding area
     text: We now have instructors all around York and the surrounding area.
-    image: "/img/lessons-2-350x150.jpg"
+    image: "https://res.cloudinary.com/njh101010/image/upload/q_auto/v1637593898/checkmirrors/lessons-2-350x150_x53pbd.webp"
   - heading: Safe and Calm Environment
     text: We know how nerve wracking it is to learn to drive, so we take care to make
       you as comfortable as possible.
-    image: "/img/lessons-4-350x150.jpeg"
+    image: "https://res.cloudinary.com/njh101010/image/upload/q_auto/v1637593926/checkmirrors/lessons-4-350x150_hwr1xo.webp"
   - heading: Learn with an ADI Instructor
     text: All of our instructors are ADI certified, approved by the DVSA to the highest
       standard.
-    image: "/img/lessons-1-350x150.jpg"
+    image: "https://res.cloudinary.com/njh101010/image/upload/q_auto/v1637593949/checkmirrors/lessons-1-350x150_tnugny.webp"
   - heading: Available for all Levels of Experience
     text: Just turned 17 and starting out or in need of some refresher lessons, we
       will help you get on the road.
-    image: "/img/lessons-3-350x150.jpg"
+    image: "https://res.cloudinary.com/njh101010/image/upload/q_auto/v1637593968/checkmirrors/lessons-3-350x150_qizbqh.webp"
   heading: What do we offer?
   sub_heading: It couldn't be easier to learn with checkmirrors.
 pass_plus_section:
@@ -63,7 +63,7 @@ pass_plus_section:
     button_link: "/passplus/"
     button_text: Find out more
   image:
-    image: "/uploads/passpluss1.JPG"
+    image: "https://res.cloudinary.com/njh101010/image/upload/q_auto/v1637594196/checkmirrors/passpluss1_m4qyef.webp"
     image_alt: Pass Plus Student
 
 ---
