--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ services_section:
   section_title: Our Services
   section_sub-title: Learning to drive couldn't be easier with checkmirrors
   section_cards:
-  - card_image: "/uploads/card-1.jpg"
+  - card_image: "https://res.cloudinary.com/njh101010/image/upload/q_auto/v1637591504/checkmirrors/card-1.webp"
     card_title: Learn to Drive
     card_text: |-
       * Flexible times to suit
@@ -27,7 +27,7 @@ services_section:
     card_button:
       button_link: "/driving-lessons-york/"
       button_text: Learn More
-  - card_image: "/uploads/card-2.jpeg"
+  - card_image: "https://res.cloudinary.com/njh101010/image/upload/q_auto/v1637591504/checkmirrors/card-2.webp"
     card_title: Pass Plus
     card_button:
       button_link: "/passplus"
@@ -37,7 +37,7 @@ services_section:
       * Excellent for new drivers
       * Lower your insurance premium
       * Safe driving for life
-  - card_image: "/uploads/card-3.jpg"
+  - card_image: "https://res.cloudinary.com/njh101010/image/upload/q_auto/v1637591504/checkmirrors/card-3.webp"
     card_title: Become an Instructor
     card_button:
       button_link: "/become-an-instructor/"
@@ -52,23 +52,23 @@ services_section:
 testimonial_section:
   section_title: What our students say...
   testimonials:
-  - testimonial_image: "/uploads/testimonial2018.jpg"
+  - testimonial_image: "https://res.cloudinary.com/njh101010/image/upload/q_auto/v1637591506/checkmirrors/testimonial2018.webp"
     name: Beth Loseby
     testimonial_text: "  \n “Couldn’t recommend Rob from Checkmirrors driving school
       enough, after struggling with driving for months before taking lessons with
       him, I noticed a change straight away and passed first time!”"
-  - testimonial_image: "/uploads/adam-walsh.jpg"
+  - testimonial_image: "https://res.cloudinary.com/njh101010/image/upload/q_auto/v1637591503/checkmirrors/adam-walsh.webp"
     name: Adam Welsh
     testimonial_text: “Thanks to Rob from Checkmirrors I passed first time with only
       4 minors. Rob is a great driving instructor, easy to get along with, I’d definitely
       recommend. Thanks again Rob"
-  - testimonial_image: "/uploads/bridie-murray.jpg"
+  - testimonial_image: "https://res.cloudinary.com/njh101010/image/upload/q_auto/v1637591504/checkmirrors/bridie-murray.webp"
     name: Bridie Murray
     testimonial_text: '"Sarah has been fantastic. After going through at least 5 other
       different instructors, I instantly knew Sarah was a keeper! Would 100% recommend,
       lessons were fun and stress free. Sarah was very good at keeping me calm as
       I was a nervous driver."'
-  - testimonial_image: "/uploads/luke-pass.jpg"
+  - testimonial_image: "https://res.cloudinary.com/njh101010/image/upload/q_auto/v1637591505/checkmirrors/luke-pass.webp"
     name: Luke Swainsbury
     testimonial_text: "“Passed first time, massive thank you to Rob at Checkmirrors
       for all the time and effort you put into me, extremely recommend. Thanks again”"
@@ -80,7 +80,7 @@ about_section:
     We are a small company with experienced driving instructors in York who give total quality tuition assuring complete safety for each pupil.
 
     Our aim is not just to teach people to pass a driving test but to teach a skill for life so when they leave us they are a safe and competent driver.
-  image: "/img/about.jpg"
+  image: "https://res.cloudinary.com/njh101010/image/upload/q_auto/v1637593502/checkmirrors/about_x0kulj.webp"
 features_section:
   learner:
     icon: <span class="fas fa-graduation-cap"></span>
