--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ features_section:
             <h1><span class="title-a">check</span><span class="title-b">mirrors</span> <span class="title-c">Driving instructors in York</span></h1>
             <p class="lead">As an established school of motoring we pride ourselves on offering a professional, high standard service that always puts the pupil first.</p>
             <div class="mb-3">
-              <a class="primary-btn btn-bg btn-responsive" href="tel:07821291783" role="button"><i class="fa fa-phone" data-wow-delay=".1s"></i> Call to Book</a> or <button class="primary-btn btn-bg btn-responsive" data-bs-toggle="modal" data-bs-target="#bookFormModal">Book Online</button>
+              <a class="primary-btn btn-bg btn-responsive" href="tel:07821291783" role="button" id="callBtn"><i class="fa fa-phone" data-wow-delay=".1s"></i> Call to Book</a> or <button class="primary-btn btn-bg btn-responsive" data-bs-toggle="modal" data-bs-target="#bookFormModal">Book Online</button>
             </div>
             {% include fb-share.html %}
           </div>
