--- a/our-instructors.html
+++ b/our-instructors.html
@@ -49,6 +49,10 @@ instructors:
     technology. I was highly recommended Checkmirrors as a driving school due to their
     high standards which I have witnessed from the company's instructors.
   instructor_image: "/v1660377400/checkmirrors/IMG_0688.jpg"
+- instructor_name: Adam Milling
+  instructor_info: ''
+  instructor_bio: I was a postie for 15 years, and I had a passion to further myself. I have always been a confident driver, and this has encouraged me to teach others to drive. I am friendly, easy to approach, listen to people's opinion and can get along with anyone. I am enjoying the change of working environment and have found sarah and the Check mirrors team a great support, and a pleasure to work beside.
+  instructor_image: "/v1700046967/checkmirrors/WhatsApp_Image_2023-11-15_at_10.53.14.jpg"
 - instructor_name: Naaman Hudson
   instructor_info: Web Developer
   instructor_bio: "Naaman is the checkmirrors web developer and has been working in
