--- a/testimonials-17.html
+++ b/testimonials-17.html
@@ -36,7 +36,7 @@ tags:
         <div class="googleReviewStars">
           <i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i><span class="starBack"></span>
         </div>
-        <span class="googleReviewScore">{{ site.data.siteData.reviews.google.reviewScore }}</span><span class="googleReviewCount"> {{site.data.siteData.reviews.google.reviewCount}} Reviews</span>
+        <span class="googleReviewScore">{{ site.data.siteData.reviews.google.reviewScore }} Stars</span><span class="googleReviewCount"> {{site.data.siteData.reviews.google.reviewCount}} Reviews</span>
       </div>
       </a>
     </div>
