--- a/our-instructors.html
+++ b/our-instructors.html
@@ -20,18 +20,18 @@ instructors:
   instructor_info: Sarah is the founder of checkmirrors.
   instructor_bio: She is an ADI with qualifications that include The Diamond Special
     Test, Pass Plus and Cardington Special Test. She has been a fully qualified instructor
-    for over 17 years and takes pride in offering a professional, calm and safe environment
+    for over 21 years and takes pride in offering a professional, calm and safe environment
     that will help you pass your test.
   instructor_image: "/v1660378129/checkmirrors/IMG_0695.jpg"
 - instructor_name: Rob Kedge
   instructor_image: "/v1637596331/checkmirrors/rob-kedge_e8cn1f.jpg"
-  instructor_bio: Rob has 17 years experience as an ADI. He is a patient and friendly
-    instructor able to adapt to teaching methods to suit each individual person. As
+  instructor_bio: Rob has 21 years experience as an ADI. He is a patient and friendly
+    instructor able to adapt to teaching methods to suit each individual person. Rob is one of our instructors who teaches with an automatic vehicle for those wishing to drive automatic cars. As
     well as an ADI Rob is a Pass Plus and Fleet trainer.
   instructor_info: ''
 - instructor_name: Ryan Fawcett
   instructor_bio: Ryan is a qualified driving instructor and has been teaching for
-    over 2 and half years. Ryan is a Business Management graduate who has spent 5
+    over 6 years. Ryan is a Business Management graduate who has spent 5
     years in sales before deciding to become a qualified driving instructor in York.
     Ryan enjoys working with all ages and thrives on the challenge and success of
     helping people pass their tests.
