--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@ features_section:
     feature_cta:
       button_text: Find out more
       button_link: "/become-an-instructor/"
-
+intro_section:
+  heading: <span class="title-a">check</span><span class="title-b">mirrors</span> and Children in Need 
+  text: Here at checkmirrors we do our best to support local and national charities. Every year our checkmirrors fleet join together with other local instructors to raise money for Children in Need. 
+  image: https://res.cloudinary.com/njh101010/image/upload/v1710145977/checkmirrors/WhatsApp_Image_2024-03-10_at_14.23.21.jpg
 ---
 <section class="home_banner_area">
   <!-- <video class="my-background-video jquery-background-video d-none d-sm-none d-md-inline" loop autoplay muted playsinline poster="{{site.github.url}}/img/home-new2.jpg">
@@ -134,6 +137,7 @@ features_section:
 
 {% include services_section.html %}
 {% include features_section.html %}
+{% include charity_promo.html %}
 {% include testimonials_section.html %}
 {% include about.html %}
 {% include structured-data.html %}
